# study_dbt

./: .gitignore  README.md  poetry.toml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  setup-postgres.sql  startup.sh
.github/: dependabot.yml
data/: dev.sample.db
data/sample/: claims_bradesco.csv
duckdb/: README.md  create_db.py  lib.py
exo_01/: README.md  dbt_project.yml  profiles.yml
exo_01/models/: avg_num_dropoff_manhattan.sql  credit_card_count.sql
exo_02/: .user.yml  README.md  dbt_project.yml  profiles.yml
exo_02/models/: crypto_data.sql
exo_02/models/cryptos/: btc_closing_above_3k.sql
exo_03/: .user.yml  README.md  dbt_project.yml  profiles.yml
exo_04/: .user.yml  README.md  dbt_project.yml  profiles.yml
exo_04/models/: adid_data.sql
exo_04/tests/generic/: custom_test.sql  ensure_cohort_size_max_100.sql
intro/: .user.yml  README.md  dbt_project.yml  profiles.yml
intro/models/: avg_num_dropoff_manhattan.sql  cross_borough.sql
