[tool.poetry]
name = "study-dbt"
version = "0.1.0"
description = ""
authors = ["fabio.kfouri <fabio.kfouri@ubirata.ai>"]
readme = "README.md"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.dependencies]
python = "^3.11"
dbt-core = "^1.8.4"
dbt-postgres = "^1.8.2"