[tool.poetry]
name = "study-dbt"
version = "0.1.0"
description = ""
authors = ["fabio.kfouri <fabio.kfouri@ubirata.ai>"]
readme = "README.md"

[tool.poetry.group.dev.dependencies]
ruff = "^0.7.1"
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.dependencies]
python = "^3.11"
dbt-core = "^1.8.4"
dbt-postgres = "^1.8.2"
duckdb = "^1.1.2"
dbt-duckdb = "^1.9.0"
